--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -354,6 +354,7 @@
       {
         "name": "expr",
         "type": "str",
+        "length": 3,
         "strategy": "singleton",
         "dataset": "HWF",
         "unstructured_input_type": "List[Tensor[1 x 27 x 27]]"
@@ -366,7 +367,7 @@
       {
         "name": "number_1",
         "type": "int",
-        "num_digits": 3,
+        "num_digits": 1,
         "strategy": "list",
         "dataset": "MNIST",
         "unstructured_input_type": "List[Tensor[1 x 27 x 27]]"
@@ -374,7 +375,7 @@
       {
         "name": "number_2",
         "type": "int",
-        "num_digits": 3,
+        "num_digits": 1,
         "strategy": "list",
         "dataset": "MNIST",
         "unstructured_input_type": "List[Tensor[1 x 27 x 27]]"
