--- a/generation-pipeline/configuration.json
+++ b/generation-pipeline/configuration.json
@@ -555,7 +555,24 @@
         "type": "str",
         "strategy": "list",
         "preprocess": "id",
-        "length": 5,
+        "max_length": 5,
+        "dataset": "EMNIST",
+        "unstructured_input_type": "List[Tensor[1 x 27 x 27]]"
+      }
+    ],
+    "output": {
+      "type": "str"
+    }
+  },
+  "longest_substring_without_repeating_character": {
+    "py_func": "longest_substring_without_repeating_character",
+    "inputs": [
+      {
+        "name": "s",
+        "type": "str",
+        "strategy": "list",
+        "preprocess": "id",
+        "max_length": 7,
         "dataset": "EMNIST",
         "unstructured_input_type": "List[Tensor[1 x 27 x 27]]"
       }
